...
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:navGraph="@navigation/navigation_graph" />


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/bottom_nav_drawer"
                android:name="com.yogeshpaliyal.keypasscompose.ui.nav.BottomNavDrawerFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <com.google.android.material.bottomappbar.BottomAppBar
...
                app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
                app:hideOnScroll="true"
                app:menu="@menu/bottom_app_bar"
                app:navigationIcon="@drawable/ic_round_menu_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/bottomAppBar"
                app:fabAnchorMode="embed"
                app:srcCompat="@drawable/asl_add_save"/>

...
