<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="@dimen/grid_0_25"
        tools:listitem="@layout/item_accounts"
        android:paddingBottom="@dimen/bottom_app_bar_height"
        android:transitionGroup="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:paddingTopSystemWindowInsets="@{true}"
        app:paddingBottomSystemWindowInsets="@{true}"/>

</layout>