<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/scrim_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:alpha="0"
            android:background="?attr/scrimBackground"/>


            <!--Container to act as the drawer's foreground container and hold all navigation-->
            <FrameLayout
                app:behavior_hideable="true"
                app:behavior_skipCollapsed="true"
                app:behavior_halfExpandedRatio="0.6"
                android:id="@+id/foreground_container"
                android:layout_width="match_parent"
                app:layout_behavior="@string/bottom_sheet_behavior"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/grid_4">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nav_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/grid_3"
                    android:paddingBottom="@dimen/bottom_app_bar_height"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical" />

            </FrameLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
